fix(acquirer): stabilize concurrent TCP communication test